# gpu-accelerated-sdf-text

./: .gitmodules  README.md
metal/: CMakeLists.txt  renderer.cpp  renderer.hpp
metal/lib/: CMakeLists.txt  glyph_set.hpp  glyph_set.mm  glyph_texture.cpp  glyph_texture.hpp  sdf_text.metal  sdf_text_types.h  text_renderer.cpp  text_renderer.hpp
